--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,37 @@
-.App {
-  text-align: center;
+*{
+  margin: 0;
+}
+.app {
+  background-color: rgb(232, 232, 232);
+
+}
+.app__headerImg{
+  height: 25px;
+
+}
+.app__header {
+  background-color: rgb(255, 255, 255);
+  padding: 13px 0 0 12px;
+  object-fit: contain;
+  border-bottom: 1px solid lightgray;
+  display: flex;
+}
+.app__headerRightDiv{
+  margin-left: auto; 
+margin-right: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app_credPopup {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.app__formImg {
+  height: 40px;
+  width: 100px;
+  align-self: center;
+  padding: 10px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.app__posts {
+  padding: 20px;
 }
